# robot-swing

./: LICENSE  Main3.cpp  README.md
SinglePendulum/: gsl-build  pendulum.cpp  robotpendulum.cpp
machine-learning/: Action.cpp  Action.h  Encoder.h  Environment.cpp  Environment.h  Experience.cpp  Experience.h  Main.cpp  PriorityQueue.h  State.cpp  State.h  State3.cpp  State3.h  StateSpace.cpp  StateSpace.h  StateSpace3.cpp  StateSpace3.h  selectAction.h  state.h
pendulum/: Action3.cpp  Action3.h  Environment.cpp  Environment.h  Main3.cpp  PriorityQueue.h  State3.cpp  State3.h  StateSpace3.cpp  StateSpace3.h  environment.cpp  environment.h  main.cpp
sdk-clean/bodyinfo/: bodyinfo.cpp  bodyinfo.h  main.cpp  qiproject.xml
sdk-clean/cameratools/: cameratools.cpp  cameratools.h  main.cpp  qiproject.xml
sdk-clean/humanswing/: CMakeLists.txt  main.cpp
sdk-clean/humanswing/build-dancross/: Makefile
sdk-clean/landmarkswing/: CMakeLists.txt  main.cpp  qiproject.xml
sdk-clean/localcall/: CMakeLists.txt  main.cpp
sdk-clean/machinelearning/: CMakeLists.txt  Main.cpp  PriorityQueue.h  State.h  StateSpace.cpp  StateSpace.h  aqv_priority_queue.h  encoder.cpp  encoder.h  priority_queue.h
sdk-clean/machinelearning/build-m/: Makefile  cmake_install.cmake
sdk-clean/machinelearning/build-ml/: CMakeCache.txt
sdk-clean/moduletest/: CMakeLists.txt  README.txt  moduletest.h
sdk-clean/movementtools/: README.txt  main.cpp  movementtools.cpp  movementtools.h
sdk/bodyangles/: CMakeLists.txt  README.txt  bodyangles.cpp  bodyangles.h  main.cpp  qiproject.xml
sdk/bodyinfo/: CMakeLists.txt  README.txt  bodyinfo.cpp  bodyinfo.h
sdk/cameratools/: CMakeLists.txt  cameratools.cpp  cameratools.h  main.cpp
sdk/cameratools/.qi/: qibuild.xml
sdk/camtest/: CMakeLists.txt  README.txt  camtest.cpp  camtest.h  main.cpp  qiproject.xml
sdk/camtestcall/: CMakeLists.txt  main.cpp
sdk/com/: CMakeLists.txt  CMakeLists.txt.user.9c04463  main.cpp  qiproject.xml
sdk/com/build-harry/: CMakeCache.txt  Makefile  cmake_install.cmake  com.cbp  dependencies.cmake  qitest.cmake
sdk/com/build-naoqi/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake  qitest.cmake
sdk/encoder/: encoder.h  libpmd1208fs.c  main.cpp
sdk/encoder/lib/: 80-pmd.rules  Makefile  README  demo  demo.c  libpmd1208fs.c  libpmd1208fs.so.2  libpmd1208fs.so.2.2  pmd1208fs.SlackBuild  pmd1208fs.h  slack-desc
sdk/encoder/test/: a.out
sdk/gsl/: README.txt  main.cpp
sdk/gsltest/: CMakeLists.txt  qiproject.xml  test.txt
sdk/gsltest/GSL/lib/: libgsl.so.0.15.0  libgslcblas.la  libgslcblas.so.0.0.0
sdk/gyroevent/: CMakeLists.txt  events.cpp  events.cpp.bak  events.h  main.cpp  out.txt  qiproject.xml
sdk/gyroevent/build-cross/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/gyroevent/build-crossdan/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/gyroevent/build-dancross/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/gyroevent/build-tc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk/gyroswing/: CMakeLists.txt  average.h  createmodule.cpp  createmodule.h  main.cpp  qiproject.xml  qiproject.xml.save
sdk/gyroswing/.qi/: path.conf  qibuild.xml
sdk/gyroswing/build-cross/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/gyroswing/build-crossdan/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/gyroswing/build-dan/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/humanswing/: CMakeLists.txt  humancontroller2.txt  main.cpp  qiproject.xml
sdk/landmarkswing/: CMakeLists.txt  main.cpp
sdk/localcall/: CMakeLists.txt  README.txt  main.cpp
sdk/machinelearning/: CMakeLists.txt  CreateModule.cpp  CreateModule.h  Main.cpp  PriorityQueue.h  State.cpp  State.h  StateSpace.cpp  StateSpace.h  encoder.cpp  encoder.h  main.cpp  pmd1208fs.h  qiproject.xml  test2.cpp
sdk/machinelearning/build-crossdan/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/machinelearning/build-m/: CMakeCache.txt
sdk/machinelearning/build-ml/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk/machinelearning/machine-learning/: CreateModule.cpp  CreateModule.h  PriorityQueue.h  encoder.cpp
sdk/moduletest/: README.txt  main.cpp  moduletest.cpp  moduletest.h  qiproject.xml
sdk/motionderivative/: CMakeLists.txt  main.cpp  qiproject.xml
sdk/motiontiming/: CMakeLists.txt  README.txt  main.cpp  qiproject.xml
sdk/movehead/: movehead.cpp
sdk/movementtools/: CMakeLists.txt  main.cpp  movementtools.cpp  movementtools.h  qiproject.xml
sdk/movementtools/build-ml/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
sdk/robotencoder/: .CMakeLists.txt.swp  CMakeLists.txt  encoder.cpp  encoder.h  libpmd1208fs.so.2.2  main.cpp  qiproject.xml
sdk/robotencoder/build-cross/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk/robotencoder/build-tc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk/sensormodule/: CMakeLists.txt  main.cpp  qiproject.xml  qiproject.xml~  testmodule.cpp  testmodule.h
sdk/sensormodule/build-naoqi/: CMakeCache.txt  Makefile  cmake_install.cmake  qitest.cmake  sensormodule.cbp
sdk/sensormodule/build-naoqi/sdk/: qitest.json
sdk/sensormodule/build-naoqi/sdk/share/qi/: path.conf
sdk/sensorremote/: CMakeLists.txt  main.cpp  qiproject.xml
sdk/sensorremote/build-harry/: CMakeCache.txt  Makefile  cmake_install.cmake  qitest.cmake  sensorremote.cbp
sdk/sensorremote/build-harry/sdk/: qitest.json
sdk/sensorremote/build-harry/sdk/share/qi/: path.conf
sdk/smoothmove/: CMakeLists.txt  README.txt  main.cpp  qiproject.xml  smoothmove.cpp  smoothmove.h
sdk/subscribegyro/: CMakeLists.txt  bumper.cpp  bumper.h  qiproject.xml
sdk/subscribegyrotest/: CMakeLists.txt  example.rst  index.rst  main.cpp  subscribegyro.cpp  subscribegyro.h
sdk/subscribegyrotest/build-cross/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/subscribegyrotest/build-crossdan/: CMakeCache.txt  Makefile  cmake_install.cmake
sdk/subscribegyrotest/build-tc/: CMakeCache.txt  Makefile  cmake_install.cmake
(+32 files in other folders)
